--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h1>API Braking Bad</h1>
     <div id="app" class="d-flex flex-wrap justify-content-center">
 
         <div class="card m-3" style="width:200px" v-for="personaje in info">
